spade-tests/src/snapshots/spade_tests__ast_lowering__supertraits_are_enforced.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait A: B {}
trait B {}

impl A for bool {}

struct S<T: A> { t: T }

fn test() {
    let _ = S(false);
}


error: Argument type mismatch. Expected B got bool
  ┌─ testinput:9:15
  │
1 │ trait A: B {}
  │          - Required because of the trait bound specified here
  ·
9 │     let _ = S(false);
  │               ^^^^^ bool does not implement B
